--- a/iOS/MainStoryboard_iPad.storyboard
+++ b/iOS/MainStoryboard_iPad.storyboard
@@ -18,9 +18,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="bjw-5E-YoD">
-                                <rect key="frame" x="11" y="152" width="121" height="37"/>
+                                <rect key="frame" x="7" y="152" width="131" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="  Connect" image="gear.png">
+                                <state key="normal" title="  Configure" image="gear.png">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
@@ -28,10 +28,10 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Not connected" lineBreakMode="tailTruncation" minimumFontSize="10" id="5PG-kn-YsT">
-                                <rect key="frame" x="140" y="160" width="121" height="21"/>
+                                <rect key="frame" x="145" y="160" width="121" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="18"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="or-logo.png" id="XPO-OK-7jv">
