--- a/iOS/Romibo/ChildBaseView.xib
+++ b/iOS/Romibo/ChildBaseView.xib
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="movement_base.png" id="72">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="driveBackground-02.png" id="72">
                     <rect key="frame" x="104" y="41" width="550" height="550"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
@@ -35,10 +35,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="66">
-                    <rect key="frame" x="283" y="350" width="193" height="200"/>
+                    <rect key="frame" x="288" y="373" width="193" height="165"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" image="Arrow_down.png" backgroundImage="arrow_down.png">
+                    <state key="normal" image="arrow_down.png">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -50,10 +50,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="67">
-                    <rect key="frame" x="283" y="70" width="187" height="200"/>
+                    <rect key="frame" x="291" y="95" width="187" height="166"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" image="Arrow_up.png">
+                    <state key="normal" image="arrow_up.png">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -65,10 +65,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="68">
-                    <rect key="frame" x="416" y="218" width="206" height="182"/>
+                    <rect key="frame" x="447" y="235" width="155" height="161"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" image="Arrow_right.png">
+                    <state key="normal" image="arrow_right.png">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -80,10 +80,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="69">
-                    <rect key="frame" x="145" y="218" width="194" height="185"/>
+                    <rect key="frame" x="164" y="235" width="155" height="161"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" image="Arrow_left.png">
+                    <state key="normal" image="arrow_left.png">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -104,12 +104,11 @@
         </pongPressGestureRecognizer>
     </objects>
     <resources>
-        <image name="Arrow_down.png" width="16" height="16"/>
-        <image name="Arrow_left.png" width="16" height="16"/>
-        <image name="Arrow_right.png" width="375" height="116"/>
-        <image name="Arrow_up.png" width="16" height="16"/>
         <image name="arrow_down.png" width="618" height="663"/>
-        <image name="movement_base.png" width="338" height="337"/>
+        <image name="arrow_left.png" width="663" height="618"/>
+        <image name="arrow_right.png" width="663" height="618"/>
+        <image name="arrow_up.png" width="618" height="663"/>
+        <image name="driveBackground-02.png" width="1465" height="1447"/>
         <image name="silhouette.png" width="30" height="25"/>
     </resources>
 </document>
